# HP-AI-Engine

./: HP_AI_ENGINE.md  pyproject.toml  requirements.txt
configs/: data_config.yaml  deployment_config.yaml  model_config.yaml  training_config.yaml
hp_ai_engine/: __init__.py
hp_ai_engine/data/: __init__.py  dataset.py  feature_engineering.py  graph_builder.py  ingestion.py  schemas.py  synthetic.py
hp_ai_engine/location/: __init__.py  clustering.py  mdu_decision.py  site_scoring.py
hp_ai_engine/models/: __init__.py  context_attention.py  explainability.py  gcn_encoder.py  tft_gcn.py  tft_model.py  uncertainty.py
hp_ai_engine/optimiser/: __init__.py  demand_shifting.py  dispenser_rules.py  tanker_routing.py
hp_ai_engine/scalability/: __init__.py  drift_detection.py  onboarding.py  retraining.py
hp_ai_engine/training/: __init__.py  federated.py  loss.py  trainer.py  transfer.py
hp_ai_engine/utils/: __init__.py  config.py  geo.py  logging.py  metrics.py  time_utils.py
tests/: __init__.py  test_data.py  test_engine.py  test_utils.py
